@@ -15,24 +15,19 @@
  */
 package com.android.tools.idea.gradle.dsl.model.build;
 
-import static com.android.tools.idea.gradle.dsl.TestFileName.SUB_PROJECTS_APPLY_PLUGINS;
-import static com.android.tools.idea.gradle.dsl.TestFileName.SUB_PROJECTS_APPLY_PLUGINS_SUB;
-import static com.android.tools.idea.gradle.dsl.TestFileName.SUB_PROJECTS_APPLY_PLUGINS_SUB2;
-import static com.android.tools.idea.gradle.dsl.TestFileName.SUB_PROJECTS_OVERRIDE_SUB_PROJECT_SECTION;
-import static com.android.tools.idea.gradle.dsl.TestFileName.SUB_PROJECTS_OVERRIDE_SUB_PROJECT_SECTION_SUB;
-import static com.android.tools.idea.gradle.dsl.TestFileName.SUB_PROJECTS_SUB_PROJECTS_SECTION;
-import static com.android.tools.idea.gradle.dsl.TestFileName.SUB_PROJECTS_SUB_PROJECTS_SECTION_WITH_LOCAL_PROPERTIES;
-
 import com.android.tools.idea.gradle.dsl.api.GradleBuildModel;
 import com.android.tools.idea.gradle.dsl.api.PluginModel;
 import com.android.tools.idea.gradle.dsl.api.ProjectBuildModel;
 import com.android.tools.idea.gradle.dsl.api.java.JavaModel;
 import com.android.tools.idea.gradle.dsl.model.GradleFileModelTestCase;
-import com.google.common.collect.ImmutableSet;
 import com.intellij.openapi.module.Module;
 import com.intellij.pom.java.LanguageLevel;
-import java.util.List;
 import org.junit.Test;
+
+import java.util.List;
+import java.util.Set;
+
+import static com.android.tools.idea.gradle.dsl.TestFileName.*;
 
 /**
  * Tests subprojects section of the build.gradle file.
@@ -101,8 +96,8 @@ public class SubProjectsTest extends GradleFileModelTestCase {
     GradleBuildModel sub2Model = buildModel.getModuleBuildModel(otherSub);
     List<PluginModel> sub2Plugins = sub2Model.plugins();
 
-    assertSameElements(PluginModel.extractNames(mainPlugins), ImmutableSet.of("foo"));
-    assertSameElements(PluginModel.extractNames(subPlugins), ImmutableSet.of("bar", "baz"));
-    assertSameElements(PluginModel.extractNames(sub2Plugins), ImmutableSet.of("bar", "quux"));
+    assertSameElements(PluginModel.extractNames(mainPlugins), Set.of("foo"));
+    assertSameElements(PluginModel.extractNames(subPlugins), Set.of("bar", "baz"));
+    assertSameElements(PluginModel.extractNames(sub2Plugins), Set.of("bar", "quux"));
   }
 }
